fixed pixel spacing issue on video

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
 .herovid {
 	margin-top:0px; margin-bottom:0px; min-height:500px; height:90vh; color:white; width:100%; overflow:hidden;
 	position:relative;
+	background-color:#000;
 }
 
 .herotext {
@@ -21,6 +22,7 @@ font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
 	min-height:100%;
 	min-width:100%;
 	object-fit:fill;
+	display:block;
 }
 
 .back-to-top {
